procps-ng-NEXT
----------------
  * ps: sort by cgroup Debian #692279

procps-ng-3.3.11
----------------
  * libprocps API 5:0:0
  * pgrep: don't crash with -a -w flags. Merge 33, Debian #768190
  * skill: command line with signal number interpreted correctly
  * pmap: print process name even if smaps is unreadable Debian #775624
  * ps: sort by etimes column, uses etime Debian #794619
  * ps, top: Add support for LXC containers. Ubuntu #1174911
  * w: work with smaller window sizes Debian #183394
  * w: correctly find "best" proc with pid wrap
  * library: use merged systemd library Debian #731256
  * kill,skill,pkill: fix option parsing
  * top once again will fully honor a saved rcfile,
    without requiring --disable-modern-top. Debian #762928, #762947
  * vmstat: Not crash if partition appears before disk Debian #736628
  * free: -s without -c works Debian #733758

procps-ng-3.3.10
----------------
  * sysctl --system loads default config file - Debian #732920
  * ps doesn't exit on SIGCONT
  * top better accommodates discontinuous NUMA nodes
  * ps cmdline trailing spaces suppressed under zsh, redhat #1057600
  * kill restores the '-HUP -1' functionality
  * vmstat -d / -p segfault eliminated when /sys is not mounted
  * pgrep properly shows full command line when -au are combined
  * vmstat supports timestamps with -t/--timestamp option
  * top is now immune to distortions when system time is reset
  * top standardized the <Esc> key support with prompted input
  * top missing summary area info added to man document, ubuntu #574624
  * top properly responds to the current locale LC_NUMERIC setting
  * top provides alternate graph modes for cpu states and memory usage
  * top offers new startup defaults, plus ./configure --disable-modern-top
  * top exploits MemAvailable field and offers improved memory statistics
  * ps new --quick-pid option, a more efficient alternative to --pid option