@@ -1,6 +1,7 @@
 procps-ng-NEXT
 ----------------
   * ps: sort by cgroup Debian #692279
+  * ps: display control group name with -o cgname
 
 procps-ng-3.3.11
 ----------------
